--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -113,7 +113,7 @@
                             <span class="flurstueck">
                                 <span *ngIf="flurstueck.features[0]?.properties.gemarkungsnummer"
                                       class="pr-0 pl-0">
-                                    <small>({{ flurstueck.features[0].properties.gemarkungsnummer }})</small>
+                                    <small>{{ flurstueck.features[0].properties.gemarkungsnummer }}</small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.flurnummer"
                                       class="pr-0 pl-0">
@@ -177,7 +177,7 @@
                             <span class="flurstueck">
                                 <span *ngIf="flurstueck.features[0]?.properties.gemarkungsnummer"
                                       class="pr-0 pl-0">
-                                    <small>({{ flurstueck.features[0].properties.gemarkungsnummer }})</small>
+                                    <small>{{ flurstueck.features[0].properties.gemarkungsnummer }}</small>
                                 </span>
                                 <span *ngIf="flurstueck.features[0]?.properties.flurnummer"
                                       class="pr-0 pl-0">
