--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -8,8 +8,7 @@
                     <div class="btn-group d-flex">
                         <div class="btn-group"
                              role="group"
-                             dropdown
-                             [autoClose]="false">
+                             dropdown>
                             <button id="button-stichtage-1"
                                     dropdownToggle
                                     type="button"
@@ -276,8 +275,7 @@
                     <div class="btn-group d-flex">
                         <div class="btn-group"
                              role="group"
-                             dropdown
-                             [autoClose]="false">
+                             dropdown>
                             <button class="btn btn-block nav-link dropdown-toggle"
                                     [ngClass]="{'active': functionsActive}"
                                     type="button"
