changed color of flurstueck-layer and labels

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -538,7 +538,7 @@
                    [minzoom]="15"
                    [sourceLayer]="'ax_flurstueck_nds'"
                    [paint]="{
-                        'line-color': '#343a40',
+                        'line-color': '#96999e',
                         'line-width': {
                             'stops': [[15,0],[16,1],[18,2]]
                         },
@@ -668,7 +668,7 @@
                         'text-halo-color': '#fff',
                         'text-halo-width': 2,
                         'text-halo-blur': 2,
-                        'text-color': 'rgb(117, 129, 145)'
+                        'text-color': teilmarkt.color
                     }"
                    [layout]="{
                         'visibility': 'visible',
@@ -688,7 +688,7 @@
                         'text-halo-color': '#fff',
                         'text-halo-width': 2,
                         'text-halo-blur': 2,
-                        'text-color': 'rgb(117, 129, 145)'
+                        'text-color': teilmarkt.color
                     }"
                    [layout]="{
                         'visibility': 'visible',
