--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -106,7 +106,7 @@
                                  aria-hidden="true">
                                 <g transform="translate(-10,-20) scale(0.5,0.4)">
                                     <path fill="none"
-                                          stroke="#343a40"
+                                          stroke="#96999e"
                                           d="M 27.237147,57.888549 51.106583,52.026518 66.420364,96.500039 40.933018,96.903113 Z" />
                                 </g>
                             </svg> :
@@ -176,7 +176,7 @@
                                  aria-hidden="true">
                                 <g transform="translate(-10,-20) scale(0.5,0.4)">
                                     <path fill="none"
-                                          stroke="#343a40"
+                                          stroke="#96999e"
                                           d="M 27.237147,57.888549 51.106583,52.026518 66.420364,96.500039 40.933018,96.903113 Z" />
                                 </g>
                             </svg> :
