added 3d styling for brw zonen

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -500,6 +500,7 @@
              (moveEnd)="onMoveEnd()"
              (resize)="onMoveEnd()"
              (load)="loadMap($event)"
+             (rotate)="onRotate($event)"
              [bounds]="bounds"
              [maxZoom]="20"
              [minZoom]="5"
