--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -11,18 +11,8 @@
                  height="25px"
                  i18n-alt
                  alt="LGLN Logo">
-            <strong class="d-none d-md-inline">
-                <span i18n>Portal für Wertermittlung</span>
-                <span style="color: #c4153a;"
-                      i18n>.niedersachsen</span>
-            </strong>
-            <strong class="d-none d-sm-inline d-md-none">
-                <span i18n>POWER</span>
-                <span style="color: #c4153a;"
-                      i18n>.niedersachsen</span>
-            </strong>
-            <strong class="d-inline d-sm-none">
-                <span i18n>POWER</span>
+            <strong class="d-inline">
+                <span i18n>IMMOBILIENMARKT</span>
                 <span style="color: #c4153a;"
                       i18n>.NI</span>
             </strong>
@@ -360,25 +350,25 @@
                     <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
                         <li class="my-1">
-                            <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/impressum-88015.html"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
                                i18n>Impressum</a>
                         </li>
                         <li class="my-1">
-                            <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/service/datenschutzerklarung/datenschutz-im-lgln-138166.html"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
                                i18n>Datenschutz</a>
                         </li>
                         <li class="my-1">
-                            <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/nutzungsbedingungen/nutzungsbedingungen-fuer-bodenrichtwerte-88317.html"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
-                               i18n>Allgemeine Geschäfts- und Nutzungsbedingungen</a>
+                               i18n>Nutzungsbedingungen</a>
                         </li>
                     </ul>
                 </div>
