--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -9,11 +9,12 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    id="boris"
                    [routerLink]="['/bodenrichtwerte']"
-                   i18n>BORIS.NI mobile</a>
+                   i18n>BORIS.NI</a>
                 <h6 i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
-                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen und Bremen
-                    stellen interessierten Nutzern unter BORIS.NI mobile Bodenrichtwerte für Bauland und für Flächen der Land-
+                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen
+                    und Bremen
+                    stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land-
                     und Forstwirtschaft in Niedersachsen, Bremen und Bremerhaven zur Verfügung.</p>
             </div>
         </div>
