--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -5,7 +5,7 @@
            title="Zur Startseite"
            [routerLink]="['/']"
            style="color: #343a40;">
-            <img src="./assets/logos/logo.png"
+            <img src="./assets/logos/gag-mini.png"
                  class="mr-2 align-top"
                  aria-hidden="true"
                  height="25px"
