--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,11 +1,15 @@
 <main class="mainpage"
       id="content">
     <div class="mb-5">
-        <carousel [interval]="5000"
+        <carousel [interval]="50000"
                   [pauseOnFocus]="true"
                   [isAnimated]="true">
             <slide *ngIf="config.modules.includes('bodenrichtwerte')">
-                <div class="text-center px-5 py-5 bg-light">
+                <img src="./assets/boris-banner.png"
+                     i18n-alt
+                     alt="Bodenrichtwerte"
+                     class="carousel-image">
+                <div class="carousel-caption text-center my-5">
                     <h2 class="pt-4">
                         <span style="color: #343a40;">BORIS</span>
                         <span style="color: #c4153a;">.NI</span>
@@ -22,7 +26,11 @@
                 </div>
             </slide>
             <slide *ngIf="config.modules.includes('bodenwertkalkulator')">
-                <div class="text-center px-5 py-5 bg-light">
+                <img src="./assets/boris-banner.png"
+                     i18n-alt
+                     alt="Bodenwertkalkulator"
+                     class="carousel-image">
+                <div class="carousel-caption text-center my-5">
                     <h2 class="pt-4">
                         <span style="color: #343a40;">BOWERT</span>
                         <span style="color: #c4153a;">.NI</span>
@@ -39,7 +47,11 @@
                 </div>
             </slide>
             <slide *ngIf="config.modules.includes('immobilienpreisindex')">
-                <div class="text-center px-5 py-5 bg-light">
+                <img src="./assets/boris-banner.png"
+                     i18n-alt
+                     alt="Immobilienpreisindex"
+                     class="carousel-image">
+                <div class="carousel-caption text-center my-5">
                     <h2 class="pt-4">
                         <span style="color: #c4153a;">NI</span>
                         <span style="color: #343a40;">PIX</span>
@@ -56,9 +68,13 @@
                 </div>
             </slide>
             <slide *ngIf="config.modules.includes('forms')">
-                <div class="text-center px-5 py-5 bg-light">
+                <img src="./assets/boris-banner.png"
+                     i18n-alt
+                     alt="Formulare"
+                     class="carousel-image">
+                <div class="carousel-caption text-center my-5">
                     <h2 class="pt-4">
-                        <span style="color: #343a40;">FORMS</span>
+                        <span style="color: #343a40;">Formulare</span>
                         <span style="color: #c4153a;">.NI</span>
                     </h2>
                     <div class="lead text-dark">
@@ -73,7 +89,11 @@
                 </div>
             </slide>
             <slide *ngIf="config.modules.includes('feedback')">
-                <div class="text-center px-5 py-5 bg-light">
+                <img src="./assets/boris-banner.png"
+                     i18n-alt
+                     alt="Feedback"
+                     class="carousel-image">
+                <div class="carousel-caption text-center my-5">
                     <h2 class="pt-4"
                         style="color: #343a40;">FEEDBACK</h2>
                     <div class="lead text-dark">
@@ -158,7 +178,7 @@
                 <a class="h2"
                    [routerLink]="['/forms']"
                    i18n>
-                    <span style="color: #343a40;">FORMS</span>
+                    <span style="color: #343a40;">Formulare</span>
                     <span style="color: #c4153a;">.NI</span>
                 </a>
                 <div class="lead">
