--- a/power/src/app/static/start/start.component.scss
+++ b/power/src/app/static/start/start.component.scss
@@ -10,20 +10,19 @@
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 
-@media (max-width: 1199px) {
-    .display-4 {
-        font-size: 2.8em !important;
-    }
-}
-
-@media (max-width: 991px) {
-    .display-4 {
-        font-size: 2em !important;
-    }
-}
-
 @media (max-width: 575px) {
     .w-mobile {
         width: 75% !important;
     }
+}
+
+.carousel-caption {
+    background-color: rgba(255, 255, 255, 0.6) !important;
+    border-radius: 64px;
+}
+
+.carousel-image {
+    width: 100%;
+    min-height: 420px;
+    object-fit: cover;
 }
