Made images clickable

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -131,11 +131,17 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <img src="./assets/boris.png"
-                     class="img-thumbnail img-fluid mx-auto"
-                     width="500"
-                     height="500"
-                     alt="Responsive image">
+                <a class="h2"
+                   [routerLink]="['/bodenrichtwerte']"
+                   i18n-title
+                   title="Bodenrichtwerte">
+                    <img src="./assets/boris.png"
+                         class="img-thumbnail img-fluid mx-auto"
+                         width="500"
+                         height="500"
+                         i18n-alt
+                         alt="Bodenrichtwerte">
+                </a>
             </div>
         </div>
 
@@ -162,11 +168,17 @@
                 </div>
             </div>
             <div class="col-md-5 order-md-1">
-                <img src="./assets/nipix.png"
-                     class="img-thumbnail img-fluid mx-auto"
-                     width="500"
-                     height="500"
-                     alt="Responsive image">
+                <a class="h2"
+                   [routerLink]="['/immobilienpreisindex']"
+                   i18n-title
+                   title="Immobilienpreisindex">
+                    <img src="./assets/nipix.png"
+                         class="img-thumbnail img-fluid mx-auto"
+                         width="500"
+                         height="500"
+                         i18n-alt
+                         alt="Immobilienpreisindex">
+                </a>
             </div>
         </div>
 
@@ -233,11 +245,17 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <img src="./assets/onlineForm.png"
-                     class="img-thumbnail img-fluid mx-auto"
-                     width="500"
-                     height="500"
-                     alt="Responsive image">
+                <a class="h2"
+                   [routerLink]="['/forms']"
+                   i18n-title
+                   title="Formulare">
+                    <img src="./assets/onlineForm.png"
+                         class="img-thumbnail img-fluid mx-auto"
+                         width="500"
+                         height="500"
+                         i18n-alt
+                         alt="Formulare">
+                </a>
             </div>
         </div>
     </div>
